<resources>
    <string name="app_name">여행정보 공유 어플리케이션</string>
    <string name="prefLoginState" >loginstate</string>
    <string name="IdState">idstate</string>
    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="검색" >검색 : </string>
    <string name="제목" >제목 : </string>
    <string name="회원가입">회원가입</string>
    <string name="로그인">로그인</string>
    <string name="로그아웃">로그아웃</string>
    <string name="닉네임">닉네임</string>
    <string name="이메일주소">이메일 주소</string>
    <string name="비밀번호">비밀번호</string>
    <string name="회원가입완료">회원가입완료</string>
    <string name="글삭제하기">글삭제하기</string>
    <string name="내용">내용 : </string>
    <string name="사진">사진 : </string>
    <string name="작성완료">작성완료</string>
    <string name="글작성하기">글 작성하기</string>
    <string name="service">KorService</string>
    <string name="m_contypeid">12</string>
    <string name="hotel_contypeid">32</string>
    <string name="event_contypeid">15</string>
    <string name="st_info">정보</string>
    <string name="st_location">위치</string>
    <string name="st_review">후기</string>
    <string name="travel_info">여행지</string>
    <string name="hotel_info">숙소</string>
    <string name="event_info">이벤트</string>
    <string name="즐겨찾기">즐겨찾기</string>
    <string name="여행">여행지에 대한 정보를 나누는 공간입니다. </string>
    <string name="text1">에 작성된 글입니다.</string>
    <string name="login_check">로그인이 필요합니다</string>
</resources>
