<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="never"
        android:title="TODO">
        <item
            android:id="@+id/search_travel"
            android:title="@string/검색"
            app:actionLayout="@layout/search_travel"
            app:showAsAction="always|withText"/>
    <item
        android:id="@+id/register"
        android:title="@string/회원가입"
        />
    <item
        android:id="@+id/login"
        android:title="@string/로그인"
        />
        <item
            android:id="@+id/logout"
            android:title="@string/로그아웃"
            />
    </item>
    <item
        android:id="@+id/favorite"
        android:title="@string/즐겨찾기"
        />




</menu>